# traypp

./: CMakeLists.txt
tray/include/: tray.hpp
tray/include/core/linux/: tray.hpp
tray/include/core/windows/: tray.hpp
tray/src/components/: button.cpp  imagebutton.cpp  label.cpp  separator.cpp  submenu.cpp  syncedtoggle.cpp  toggle.cpp
tray/src/core/: entry.cpp  traybase.cpp
tray/src/core/linux/: icon.cpp  image.cpp  tray.cpp
tray/src/core/windows/: icon.cpp  image.cpp  tray.cpp
